--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>air quality in polaroids</title>
-  <link rel="icon" type="image/x-icon" href="./imgaes/polaroid-g39615198e_640-removebg-preview.png">
+  <link rel="icon" type="image/x-icon" href="./images/polaroid-g39615198e_640-removebg-preview.png">
   <meta />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="polaroid">
+    <div class="photo"></div>
+    <div class="description">
+      <p class="date"></p>
+      <p class="content">미세먼지 </p>
+      <p class="content">초미세먼지 </p>
+      <p class="content">황사 </p>
+    </div>
+  </div>
 </body>
 </html>
