js. 날짜 정보 가져옴

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="./images/polaroid-g39615198e_640-removebg-preview.png">
   <meta />
   <link rel="stylesheet" href="style.css">
+  <script src="main.js" defer></script>
 </head>
 <body>
   <div class="polaroid">
