html, css 공유 버튼 만듬

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <!-- jQuery import   -->
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
   <script src="http://code.jquery.com/jquery-latest.js"></script>
+  
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/66c456ca9f.js" crossorigin="anonymous"></script>
 
   <!-- <script async defer 
           src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCa_Tf_ZN-064tR2_N9wzV6l5F-9B6lwz4&callback=initMap"></script> -->
@@ -61,6 +64,7 @@
           </div>
           <input type="file" id="chooseFile" name="chooseFile" accept="image/*" onchange="loadFile(this)">
           <div class="submitButton" id="submitButton">선택 완료</div>
+        
       </form>
       </div>
       <div class="description">
@@ -70,6 +74,8 @@
       </div>
     </div>
   </div>  
-  
+  <button class="share-icon">
+    <i class="fas fa-share"></i>
+  </button>
 </body>
 </html>
