fn_sendFB() 함수 작성 중 커밋함

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>air quality in polaroids</title>
+  <title>AQI in polaroids</title>
   <link rel="icon" type="image/x-icon" href="./images/polaroid-g39615198e_640-removebg-preview.png">
   <meta />
   <link rel="stylesheet" href="style.css">
@@ -74,6 +74,12 @@
       </div>
     </div>
   </div>  
+  <ul class="sns">
+    <li class="kakaoTalk" onclick="fn_sendFB('kakaoTalk')"><a href="#n">카톡</a></li>
+    <li class="twitter" onclick="fn_sendFB('twitter')"><a href="#n">트위터</a></li>
+    <li class="instagram" onclick="fn_sendFB('instagram')"><a href="#n">인스타그램</a></li>
+    <li class="url" onclick="fn_sendFB('url')"><a href="#n">URL</a></li>
+  </ul>
   <button class="share-icon">
     <i class="fas fa-share"></i>
   </button>
