사진저장 버튼 구현

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>AQI in polaroids</title>
   <link rel="icon" type="image/x-icon" href="./images/polaroid-g39615198e_640-removebg-preview.png">
   <meta />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"> 
 
   <!-- jQuery import   -->
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
@@ -15,10 +15,13 @@
   
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/66c456ca9f.js" crossorigin="anonymous"></script>
-
+  
+  
   <!-- <script async defer 
           src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCa_Tf_ZN-064tR2_N9wzV6l5F-9B6lwz4&callback=initMap"></script> -->
+  <script src="html2canvas.js"></script>
   <script src="main.js" defer></script>
+  
   
 </head>
 <body class="body">
@@ -74,12 +77,12 @@
       </div>
     </div>
   </div>  
-  <ul class="sns">
+  <!-- <ul class="sns">
     <li class="kakaoTalk" onclick="fn_sendFB('kakaoTalk')"><a href="#n">카톡</a></li>
     <li class="twitter" onclick="fn_sendFB('twitter')"><a href="#n">트위터</a></li>
     <li class="instagram" onclick="fn_sendFB('instagram')"><a href="#n">인스타그램</a></li>
     <li class="url" onclick="fn_sendFB('url')"><a href="#n">URL</a></li>
-  </ul>
+  </ul> -->
   <button class="share-icon">
     <i class="fas fa-share"></i>
   </button>
